--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -6,6 +6,8 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "predeploy": "nuxt generate",
+    "deploy": "gh-pages -d .output/public",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .js,.vue ."
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.12.7",
     "sass": "^1.86.3",
     "vue-cal": "^4.10.2"
