--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue ."
   },
   "dependencies": {
+    "nuxt": "^3.16.2",
     "@unhead/vue": "^2.0.8",
     "swiper": "^11.2.6",
     "typescript": "^5.8.3",
