--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -14,16 +14,13 @@
     "nuxt": "^3.16.2",
     "@unhead/vue": "^2.0.8",
     "swiper": "^11.2.6",
-    "typescript": "^5.8.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "gsap": "^3.12.7",
-    "nuxt": "^3.16.2",
     "sass": "^1.86.3",
     "vue-cal": "^4.10.2"
   }
