--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .js,.vue ."
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "nuxt": "^3.16.2",
-    "@unhead/vue": "^2.0.8",
     "swiper": "^11.2.6",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
